Fix: breadcrumb/tag wrapping

--- a/_gulp-generated-files/_sass/_components/_article-preview.scss
+++ b/_gulp-generated-files/_sass/_components/_article-preview.scss
@@ -17,6 +17,7 @@
 		-webkit-box-pack: start;
 		    -ms-flex-pack: start;
 		        justify-content: flex-start;
+		margin: 8px 0;
 	}		
 }
 
