--- a/_gulp-generated-files/_sass/_components/_breadcrumbs.scss
+++ b/_gulp-generated-files/_sass/_components/_breadcrumbs.scss
@@ -4,7 +4,14 @@
 	display: inline-flex;
 	margin: 20px;	
 
+	div {
+		display: -webkit-box;
+		display: -ms-flexbox;
+		display: flex;
+	}
+
 	span {
 		color: $highlight_color;
+		margin: 0 5px;
 	}	
 }
