--- a/_gulp-generated-files/_sass/_components/_tag.scss
+++ b/_gulp-generated-files/_sass/_components/_tag.scss
@@ -2,7 +2,6 @@
 	background-color: $muted_background_color;
     border-radius: 5px;
     padding: 0 5px;
-    margin-right: 10px;
 }
 
 .tag-wrapper {
@@ -13,5 +12,4 @@
 	    flex-wrap: wrap;
 	-ms-flex-pack: distribute;
 	    justify-content: space-around;
-	margin: 8px 0;	
 }
